--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,3 +1,12 @@
-<h2>Welcome!</h2>
-<a href="/login">login</a>
-<a href="/register">register</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>You Entered my webpage</h1>
+    <p1>No I don't really have a real web page yet</p1>
+</body>
+</html>
