--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,8 @@
                     required
                 />
                 <button type="submit">Login</button>
-            </form>
+                <a href="/register">register</a>
+        </form>
         </div>
     </body>
 </html>
