--- a/templates/register.html
+++ b/templates/register.html
@@ -2,4 +2,6 @@
     <input type="text" name="username" placeholder="Username" required />
     <input type="password" name="password" placeholder="Password" required />
     <button type="submit">Register</button>
+    <a href="/login">login</a>
+
 </form>
